force-app/main/default/objects/CoIT_Expense_Type__c/CoIT_Expense_Type__c.object-meta.xml
<CustomObject>
    <label>Expense Type</label>
    <nameField>
        <label>Expense Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expenses Type</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>