force-app/main/default/objects/CoIT_Expense_Type__c/fields/CoIT_External_SIAB_Id__c.field-meta.xml
<CustomField>
    <fullName>CoIT_External_SIAB_Id__c</fullName>
    <externalId>true</externalId>
    <label>External SIAB Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>