force-app/main/default/objects/CoIT_Expense_Type__c/fields/CoIT_InputDataType__c.field-meta.xml
<CustomField>
    <fullName>CoIT_InputDataType__c</fullName>
    <label>Input Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Decimal</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>String</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>