force-app/main/default/objects/CoIT_Expense_Type__c/fields/CoIT_InputQuantityLimit__c.field-meta.xml
<CustomField>
    <fullName>CoIT_InputQuantityLimit__c</fullName>
    <label>Input Quantity Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>