force-app/main/default/objects/CoIT_Expense_Type__c/fields/CoIT_InputUnitMeasurement__c.field-meta.xml
<CustomField>
    <fullName>CoIT_InputUnitMeasurement__c</fullName>
    <label>Input Unit Measurement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minutos</fullName>
            </value>
            <value>
                <fullName>Unidades</fullName>
            </value>
            <value>
                <fullName>Dias</fullName>
            </value>
            <value>
                <fullName>Kilometros</fullName>
            </value>
            <value>
                <fullName>SI/No</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Toneladas</fullName>
            </value>
            <value>
                <fullName>Horas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>