force-app/main/default/objects/CoIT_Expense_Type__c/listViews/Expanses_Type_all.listView-meta.xml
<ListView>
    <fullName>Expanses_Type_all</fullName>
    <columns>NAME</columns>
    <columns>CoIT_External_SIAB_Id__c</columns>
    <columns>CoIT_InputUnitMeasurement__c</columns>
    <columns>CoIT_InputQuantityLimit__c</columns>
    <columns>CoIT_InputDataType__c</columns>
    <filterScope>Everything</filterScope>
    <label>Expanses Type all</label>
</ListView>